[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/fonts/EmotionEngine_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/fonts/EmotionEngine_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/MainMenu/game/new_game.gd" type="Script" id=3]
[ext_resource path="res://Scenes/MainMenu/buttons/Difficulties/Easy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/MainMenu/buttons/Difficulties/Hard.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/MainMenu/buttons/Difficulties/Medium.tscn" type="PackedScene" id=6]

[node name="NewGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 456.0
margin_right = 670.0
margin_bottom = 608.0

[node name="New Game" type="Label" parent="Menu/VBoxContainer"]
margin_right = 214.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.509804 )
custom_constants/shadow_offset_y = 2
text = "New Game"
align = 1

[node name="Configuration" type="VBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 58.0
margin_right = 214.0
margin_bottom = 577.0
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NameContainer" type="VBoxContainer" parent="Menu/VBoxContainer/Configuration"]
margin_top = 119.0
margin_right = 214.0
margin_bottom = 201.0
alignment = 1

[node name="YourName" type="Label" parent="Menu/VBoxContainer/Configuration/NameContainer"]
margin_right = 214.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.509804 )
custom_constants/shadow_offset_y = 2
text = "Your Name"
align = 1

[node name="YourNameLineEdit" type="LineEdit" parent="Menu/VBoxContainer/Configuration/NameContainer"]
margin_top = 58.0
margin_right = 214.0
margin_bottom = 82.0
max_length = 20
placeholder_text = "Your Name"

[node name="DifficultyContainer" type="VBoxContainer" parent="Menu/VBoxContainer/Configuration"]
margin_top = 221.0
margin_right = 214.0
margin_bottom = 306.0
alignment = 1

[node name="Difficulty" type="Label" parent="Menu/VBoxContainer/Configuration/DifficultyContainer"]
margin_right = 214.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.509804 )
custom_constants/shadow_offset_y = 2
text = "Difficulty"
align = 1

[node name="DifficultyButtons" type="HBoxContainer" parent="Menu/VBoxContainer/Configuration/DifficultyContainer"]
margin_top = 58.0
margin_right = 214.0
margin_bottom = 85.0
alignment = 1

[node name="Easy" parent="Menu/VBoxContainer/Configuration/DifficultyContainer/DifficultyButtons" instance=ExtResource( 4 )]
margin_left = 8.0
margin_right = 67.0

[node name="Hard" parent="Menu/VBoxContainer/Configuration/DifficultyContainer/DifficultyButtons" instance=ExtResource( 5 )]
margin_left = 71.0
margin_right = 130.0

[node name="Medium" parent="Menu/VBoxContainer/Configuration/DifficultyContainer/DifficultyButtons" instance=ExtResource( 6 )]
margin_left = 134.0
margin_right = 205.0

[node name="BrightnessContainer" type="VBoxContainer" parent="Menu/VBoxContainer/Configuration"]
margin_top = 326.0
margin_right = 214.0
margin_bottom = 400.0
alignment = 1

[node name="Brightness" type="Label" parent="Menu/VBoxContainer/Configuration/BrightnessContainer"]
margin_right = 214.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.509804 )
custom_constants/shadow_offset_y = 2
text = "Brightness"
align = 1

[node name="BrightnessSlider" type="HSlider" parent="Menu/VBoxContainer/Configuration/BrightnessContainer"]
margin_top = 58.0
margin_right = 214.0
margin_bottom = 74.0
max_value = 200.0
value = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 581.0
margin_right = 214.0
margin_bottom = 608.0
custom_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 97.0
margin_bottom = 27.0
rect_min_size = Vector2( 55, 27 )

[node name="Label" type="Label" parent="Menu/VBoxContainer/HBoxContainer/Play"]
margin_right = 55.0
margin_bottom = 27.0
rect_min_size = Vector2( 55, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
margin_left = 117.0
margin_right = 172.0
margin_bottom = 27.0
rect_min_size = Vector2( 55, 27 )

[node name="Label" type="Label" parent="Menu/VBoxContainer/HBoxContainer/Back"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 55, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="Menu/VBoxContainer/Configuration/NameContainer/YourNameLineEdit" to="." method="_on_YourNameLineEdit_text_changed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
